# aic

./: pixi.toml
aic_data_collection_pipeline/: README.md  package.xml  setup.py
aic_data_collection_pipeline/aic_data_collection_pipeline/: __init__.py  generate_qualification_config.py  run_lerobot_pipeline.py
aic_data_collection_pipeline/resource/: aic_data_collection_pipeline
tmp/: qualification_random_1.yaml  qualification_random_50.yaml
